welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:9: error: type mismatch;
 found   : Unit
 required: Int
    if(nums(j) == max){return posMax=j}
                                    ^indexOfMaxValue:8: error: type mismatch;
 found   : Unit
 required: Int
  for(j<- 0 to l-1){
       ^